--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/SoolleongX2/soolleong_server#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "date-utils": "^1.2.21",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.2.5",
