--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "soolleong_server",
   "version": "1.0.0",
   "description": "서비스 한줄 소개",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
