--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "date-utils": "^1.2.21",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "mysql2": "^2.2.5",
     "nodemon": "^2.0.6",
     "sequelize": "^6.3.5",
